KUBE/ingress-projects/awesome-4/react-rust-postgres/kube/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: app4
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: qamre/postgress-db:backend-v1 
          ports:
            - containerPort: 8000
