KUBE/ingress-projects/awesome-4/react-rust-postgres/kube/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: app4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: qamre/postgress-db:frontend-v1
          ports:
            - containerPort: 80
