KUBE/ingress-projects/awesome-4/react-rust-postgres/kube/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: app4
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
