KUBE/ingress-projects/awesome-4/react-rust-postgres/kube/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: app4
spec:
  selector:
    app: db
  ports:
    - port: 5432
      targetPort: 5432
