KUBE/ingress-projects/awesome-4/react-rust-postgres/kube/ingress-bkp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app4-ingress
  namespace: app4
spec:
  ingressClassName: nginx

  rules:
    - host: app4.myapp4.local
      http:
        paths:

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
